--- a/.gihtub/workflows/ci.yaml
+++ b/.gihtub/workflows/ci.yaml
@@ -1,11 +1,9 @@
 name: ci-alfabeta-update-products
 on:
   push:
-    branches:
-      - master
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - master
+    branches: [ "main" ]
 jobs:
   check-application:
     runs-on: ubuntu-latest
