chore: update alias-path dependency

--- a/.env_local
+++ b/.env_local
@@ -4,7 +4,7 @@ export APP_PORT=2023
 
 # db
 export DB_HOST=localhost
-export DB_PORT=15432
+export DB_PORT=15440
 
 # postgres
 export POSTGRES_DB=db-price-updater
@@ -18,3 +18,8 @@ export TIMEOUT_GET_DATA=600000
 export URL_SOAP=http://abws.alfabeta.net/alfabeta-webservice/abWsDescargas?wsdl
 export USER_ID=7881
 export PASSWORD=fermin
+
+# mailer config
+export MAILER_USER=develop@atmansystems.com
+export MAILER_PASS=lcfjvloaznzqkrdz
+export CONTACT_US_EMAIL=info@pharol.cl
