--- a/.env_dev
+++ b/.env_dev
@@ -18,3 +18,8 @@ export TIMEOUT_GET_DATA=600000
 export URL_SOAP=http://abws.alfabeta.net/alfabeta-webservice/abWsDescargas?wsdl
 export USER_ID=7881
 export PASSWORD=fermin
+
+# mailer config
+MAILER_USER=develop@atmansystems.com
+MAILER_PASS=lcfjvloaznzqkrdz
+CONTACT_US_EMAIL=info@pharol.cl
