--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,30 +1,37 @@
-name: ci-alfabeta-update-products
+name: Despliegue continuo
+
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+
 jobs:
-  check-application:
+  deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+      - name: Check out the code
+        uses: actions/checkout@v2
+
+      - name: Configurar la CLI de Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
-          node-version: 16.x
-      - name: Install dependencies
-        run: npm install
-      - name: Build
-        run: npm run build
-    #   - name: Run tests
-    #     run: npm test
-    #   - name: Deploy to alfabeta
-    #     uses: peaceiris/actions-gh-pages@v3
-    #     with:
-    #       github_token: ${{ secrets.GITHUB_TOKEN }}
-    #       publish_dir: ./dist
-    #       cname: alfabeta.com
-    #       keep_files: true
-    #       user_name: alfabeta
-    #       user_email:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+
+      - name: Construir y subir la imagen de Docker
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
+
+      - name: Desplegar en Google Cloud Run
+        run: |
+          gcloud run deploy alfabeta-price-updater \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }} \
+            --platform managed \
+            --region southamerica-east1 \
+            --allow-unauthenticated
