--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,12 +26,19 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
+
       - name: Construir y subir la imagen de Docker
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
+        secrets:
+          REGISTRY_USERNAME: _json_key
+          REGISTRY_PASSWORD: ${{ secrets.GCP_SA_KEY_JSON }}
+
 
       - name: Desplegar en Google Cloud Run
         run: |
