--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,14 +30,15 @@ jobs:
       #   uses: docker/setup-buildx-action@v2
 
       - name: Construir y subir la imagen de Docker
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
-        env:
+        secrets:
           REGISTRY_USERNAME: _json_key
           REGISTRY_PASSWORD: ${{ secrets.GCP_SA_KEY_JSON }}
+
 
 
       - name: Desplegar en Google Cloud Run
