--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,53 +1,53 @@
-name: Despliegue continuo
+# name: Despliegue continuo
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Check out the code
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Check out the code
+#         uses: actions/checkout@v2
 
-      - name: 'Autenticacion en Google Cloud'
-        uses: 'google-github-actions/auth@v1'
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY_JSON }}
+#       - name: 'Autenticacion en Google Cloud'
+#         uses: 'google-github-actions/auth@v1'
+#         with:
+#           credentials_json: ${{ secrets.GCP_SA_KEY_JSON }}
 
-      - name: Configurar la CLI de Google Cloud
-        uses: google-github-actions/setup-gcloud@v1
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+#       - name: Configurar la CLI de Google Cloud
+#         uses: google-github-actions/setup-gcloud@v1
+#         with:
+#           project_id: ${{ secrets.GCP_PROJECT_ID }}
+#           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+#           service_account_key: ${{ secrets.GCP_SA_KEY }}
+#           export_default_credentials: true
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v2
+#       # - name: Set up Docker Buildx
+#       #   uses: docker/setup-buildx-action@v2
 
-      - name: Construir y subir la imagen de Docker
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
-          secrets: |
-            REGISTRY: gcr.io
-            REGISTRY_USERNAME: _json_key
-            REGISTRY_PASSWORD: ${{ secrets.GCP_SA_KEY_JSON }}
-            REGISTRY_EMAIL: ${{secrets.GCP_SA_EMAIL }}
+#       - name: Construir y subir la imagen de Docker
+#         uses: docker/build-push-action@v4
+#         with:
+#           context: .
+#           push: true
+#           tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
+#           secrets: |
+#             REGISTRY: gcr.io
+#             REGISTRY_USERNAME: _json_key
+#             REGISTRY_PASSWORD: ${{ secrets.GCP_SA_KEY_JSON }}
+#             REGISTRY_EMAIL: ${{secrets.GCP_SA_EMAIL }}
 
-      - name: Desplegar en Google Cloud Run
-        run: |
-          gcloud run deploy alfabeta-price-updater \
-            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }} \
-            --platform managed \
-            --region southamerica-east1 \
-            --allow-unauthenticated
+#       - name: Desplegar en Google Cloud Run
+#         run: |
+#           gcloud run deploy alfabeta-price-updater \
+#             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }} \
+#             --platform managed \
+#             --region southamerica-east1 \
+#             --allow-unauthenticated
 
 # This workflow build and push a Docker container to Google Artifact Registry and deploy it on Cloud Run when a commit is pushed to the "main" branch
 #
@@ -93,73 +93,72 @@ jobs:
 #   Container Registry vs Artifact Registry   - https://cloud.google.com/blog/products/application-development/understanding-artifact-registry-vs-container-registry
 #   Principle of least privilege              - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
 
-# name: Build and Deploy to Cloud Run
+name: Build and Deploy to Cloud Run
 
-# on:
-#   push:
-#     branches: [ "main" ]
+on:
+  push:
+    branches: [ "main" ]
 
-# env:
-#   PROJECT_ID: YOUR_PROJECT_ID # TODO: update Google Cloud project id
-#   GAR_LOCATION: YOUR_GAR_LOCATION # TODO: update Artifact Registry location
-#   SERVICE: YOUR_SERVICE_NAME # TODO: update Cloud Run service name
-#   REGION: YOUR_SERVICE_REGION # TODO: update Cloud Run service region
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} # TODO: update Google Cloud project id
+  # GAR_LOCATION: YOUR_GAR_LOCATION # TODO: update Artifact Registry location
+  SERVICE: alfabeta-price-updater # TODO: update Cloud Run service name
+  REGION: southamerica-east1 # TODO: update Cloud Run service region
 
-# jobs:
-#   deploy:
+jobs:
+  deploy:
 #     # Add 'id-token' with the intended permissions for workload identity federation
-#     permissions:
-#       contents: 'read'
-#       id-token: 'write'
+    # permissions:
+    #   contents: 'read'
+    #   id-token: 'write'
 
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the code
+        uses: actions/checkout@v2
 
-#       - name: Google Auth
-#         id: auth
-#         # uses: 'google-github-actions/auth@v0'
-#         # with:
-#         #   token_format: 'access_token'
-#         #   workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-#         #   service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
+      - name: 'Autenticacion en Google Cloud'
+        id: auth
+        uses: 'google-github-actions/auth@v1'
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY_JSON }}
 
-#       # NOTE: Alternative option - authentication via credentials json
-#       # - name: Google Auth
-#       #   id: auth
-#       #   uses: 'google-github-actions/auth@v0'
-#         with:
-#           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      - name: Configurar la CLI de Google Cloud
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_email: ${{ secrets.GCP_SA_EMAIL }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
 
 #       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
 #       # Authenticate Docker to Google Cloud Artifact Registry
-#       - name: Docker Auth
-#         id: docker-auth
-#         uses: 'docker/login-action@v1'
-#         with:
-#           username: 'oauth2accesstoken'
-#           password: '${{ steps.auth.outputs.access_token }}'
-#           registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
+        with:
+          username: ${{ secrets.GCP_SA_EMAIL }}
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: 'gcr.io'
 
-#       - name: Build and Push Container
-#         run: |-
-#           docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-#           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+      - name: Build and Push Container
+        run: |-
+          docker build -t "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
 
 #       # END - Docker auth and build
 
-#       - name: Deploy to Cloud Run
-#         id: deploy
-#         uses: google-github-actions/deploy-cloudrun@v0
-#         with:
-#           service: ${{ env.SERVICE }}
-#           region: ${{ env.REGION }}
-#           # NOTE: If using a pre-built image, update the image name here
-#           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
+      - name: Deploy to Cloud Run
+        id: deploy
+        uses: google-github-actions/deploy-cloudrun@v0
+        with:
+          service: ${{ env.SERVICE }}
+          region: ${{ env.REGION }}
+          # NOTE: If using a pre-built image, update the image name here
+          image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
 
 #       # If required, use the Cloud Run url output in later steps
-#       - name: Show Output
-#         run: echo ${{ steps.deploy.outputs.url }}
+      - name: Show Output
+        run: echo ${{ steps.deploy.outputs.url }}
 
