--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -136,9 +136,9 @@ jobs:
 #       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
-        uses: 'docker/login-action@v1'
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.GCP_SA_EMAIL }}
+          username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
           registry: 'gcr.io'
 
