--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -136,11 +136,11 @@ jobs:
 #       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
-        uses: 'docker/login-action@v1'
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.GCP_SA_EMAIL }}
-          password: '${{ steps.auth.outputs.access_token }}'
-          registry: 'gcr.io'
+          registry: gcr.io
+          username: _json_key
+          password: ${{ secrets.GCP_SA_KEY_JSON }}
 
       - name: Build and Push Container
         run: |-
