--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "migrate": "sequelize db:migrate",
     "seeder": "sequelize db:seed:all",
     "migrate:undo": "sequelize db:migrate:undo:all",
-    "prestart": "npm run migrate && npm run seeder",
+    "prestart": "",
     "start": "node .",
     "prod": "npm run build && npm run start",
     "pretest": "sequelize db:migrate",
