--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,98 +1,3 @@
-# name: Despliegue continuo
-
-# on:
-#   push:
-#     branches:
-#       - main
-
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#       - name: Check out the code
-#         uses: actions/checkout@v2
-
-#       - name: 'Autenticacion en Google Cloud'
-#         uses: 'google-github-actions/auth@v1'
-#         with:
-#           credentials_json: ${{ secrets.GCP_SA_KEY_JSON }}
-
-#       - name: Configurar la CLI de Google Cloud
-#         uses: google-github-actions/setup-gcloud@v1
-#         with:
-#           project_id: ${{ secrets.GCP_PROJECT_ID }}
-#           service_account_email: ${{ secrets.GCP_SA_EMAIL }}
-#           service_account_key: ${{ secrets.GCP_SA_KEY }}
-#           export_default_credentials: true
-
-#       # - name: Set up Docker Buildx
-#       #   uses: docker/setup-buildx-action@v2
-
-#       - name: Construir y subir la imagen de Docker
-#         uses: docker/build-push-action@v4
-#         with:
-#           context: .
-#           push: true
-#           tags: gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }}
-#           secrets: |
-#             REGISTRY: gcr.io
-#             REGISTRY_USERNAME: _json_key
-#             REGISTRY_PASSWORD: ${{ secrets.GCP_SA_KEY_JSON }}
-#             REGISTRY_EMAIL: ${{secrets.GCP_SA_EMAIL }}
-
-#       - name: Desplegar en Google Cloud Run
-#         run: |
-#           gcloud run deploy alfabeta-price-updater \
-#             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/alfabeta-price-updater:${{ github.sha }} \
-#             --platform managed \
-#             --region southamerica-east1 \
-#             --allow-unauthenticated
-
-# This workflow build and push a Docker container to Google Artifact Registry and deploy it on Cloud Run when a commit is pushed to the "main" branch
-#
-# Overview:
-#
-# 1. Authenticate to Google Cloud
-# 2. Authenticate Docker to Artifact Registry
-# 3. Build a docker container
-# 4. Publish it to Google Artifact Registry
-# 5. Deploy it to Cloud Run
-#
-# To configure this workflow:
-#
-# 1. Ensure the required Google Cloud APIs are enabled:
-#
-#    Cloud Run            run.googleapis.com
-#    Artifact Registry    artifactregistry.googleapis.com
-#
-# 2. Create and configure Workload Identity Federation for GitHub (https://github.com/google-github-actions/auth#setting-up-workload-identity-federation)
-#
-# 3. Ensure the required IAM permissions are granted
-#
-#    Cloud Run
-#      roles/run.admin
-#      roles/iam.serviceAccountUser     (to act as the Cloud Run runtime service account)
-#
-#    Artifact Registry
-#      roles/artifactregistry.admin     (project or repository level)
-#
-#    NOTE: You should always follow the principle of least privilege when assigning IAM roles
-#
-# 4. Create GitHub secrets for WIF_PROVIDER and WIF_SERVICE_ACCOUNT
-#
-# 5. Change the values for the GAR_LOCATION, SERVICE and REGION environment variables (below).
-#
-# NOTE: To use Google Container Registry instead, replace ${{ env.GAR_LOCATION }}-docker.pkg.dev with gcr.io
-#
-# For more support on how to run this workflow, please visit https://github.com/marketplace/actions/deploy-to-cloud-run
-#
-# Further reading:
-#   Cloud Run IAM permissions                 - https://cloud.google.com/run/docs/deploying
-#   Artifact Registry IAM permissions         - https://cloud.google.com/artifact-registry/docs/access-control#roles
-#   Container Registry vs Artifact Registry   - https://cloud.google.com/blog/products/application-development/understanding-artifact-registry-vs-container-registry
-#   Principle of least privilege              - https://cloud.google.com/blog/products/identity-security/dont-get-pwned-practicing-the-principle-of-least-privilege
-
 name: Build and Deploy to Cloud Run
 
 on:
@@ -100,17 +5,12 @@ on:
     branches: [ "main" ]
 
 env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }} # TODO: update Google Cloud project id
-  # GAR_LOCATION: YOUR_GAR_LOCATION # TODO: update Artifact Registry location
-  SERVICE: alfabeta-price-updater # TODO: update Cloud Run service name
-  REGION: southamerica-east1 # TODO: update Cloud Run service region
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  SERVICE: alfabeta-price-updater
+  REGION: us-central1
 
 jobs:
   deploy:
-#     # Add 'id-token' with the intended permissions for workload identity federation
-    # permissions:
-    #   contents: 'read'
-    #   id-token: 'write'
 
     runs-on: ubuntu-latest
     steps:
@@ -131,9 +31,6 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-#       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
-
-#       # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
         uses: docker/login-action@v2
@@ -147,15 +44,12 @@ jobs:
           docker build -t "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
           docker push "gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
 
-#       # END - Docker auth and build
-
       - name: Deploy to Cloud Run
         id: deploy
         uses: google-github-actions/deploy-cloudrun@v0
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          # NOTE: If using a pre-built image, update the image name here
           image: gcr.io/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
 
 #       # If required, use the Cloud Run url output in later steps
