--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@types/adm-zip": "^0.5.0",
+    "@types/nodemailer-sendgrid": "^1.0.0",
     "@types/xml-js": "^1.0.0",
     "@types/xml2js": "^0.4.11",
     "adm-zip": "^0.5.10",
@@ -67,13 +68,14 @@
     "cors": "2.8.5",
     "express": "4.17.1",
     "jest": "^29.4.3",
+    "nodemailer": "^6.6.1",
+    "nodemailer-sendgrid": "^1.0.3",
     "pg": "8.5.1",
     "pg-hstore": "2.3.3",
     "sequelize": "6.3.5",
     "soap": "^1.0.0",
     "uuidv4": "6.2.6",
     "validatorjs": "3.22.1",
-    "xml2js": "^0.4.23",
-    "nodemailer": "^6.6.1"
+    "xml2js": "^0.4.23"
   }
 }
